--- a/axelor-sale/src/main/resources/i18n/messages_en.csv
+++ b/axelor-sale/src/main/resources/i18n/messages_en.csv
@@ -12,6 +12,7 @@
 "Access to parent sale order",,,
 "Accounted Revenue",,,
 "Accounting Family sale turnover (Excl. Tax) per month",,,
+"Acquired",,,
 "Action",,,
 "Actions",,,
 "Activate",,,
@@ -149,6 +150,7 @@
 "Country",,,
 "Create Order from this Template",,,
 "Create the quotation",,,
+"Create the sale order",,,
 "Creation date",,,
 "Creation for every sale order lines",,,
 "Creation for the sale order",,,
@@ -395,6 +397,7 @@
 "Please fill printing settings on sale order %s.",,,
 "Please select a customer",,,
 "Please select a customer to be able to convert opportunity into quotation.",,,
+"Please select product variant for following product(s) :",,,
 "Please select the sale order(s) to print.",,,
 "Points balance",,,
 "Previous pricing",,,
