--- a/axelor-sale/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-sale/src/main/resources/i18n/messages_fr.csv
@@ -12,6 +12,7 @@
 "Access to parent sale order","Accès à la commande parent",,
 "Accounted Revenue","C.A. pris en compte",,
 "Accounting Family sale turnover (Excl. Tax) per month","CA H.T. par famille comptable par mois",,
+"Acquired",,,
 "Action","Action",,
 "Actions","Actions",,
 "Activate","Activer",,
@@ -149,6 +150,7 @@
 "Country","Pays",,
 "Create Order from this Template","Créer Devis depuis ce modèle",,
 "Create the quotation","Création du Devis",,
+"Create the sale order","Créer la commande",,
 "Creation date","Date de création",,
 "Creation for every sale order lines","Création pour chaque ligne de commande",,
 "Creation for the sale order","Création pour la commande",,
@@ -395,6 +397,7 @@
 "Please fill printing settings on sale order %s.","Merci de remplir les paramètres d'impressions sur les devis/commandes suivantes : %s",,
 "Please select a customer",,,
 "Please select a customer to be able to convert opportunity into quotation.","Veuillez sélectionner un client pour pouvoir convertir l'opportunité en un devis.",,
+"Please select product variant for following product(s) :",,,
 "Please select the sale order(s) to print.","Merci de sélectionner le(s) devis/commande(s) à imprimer",,
 "Points balance","Solde de points",,
 "Previous pricing","Barème précédent",,
