--- a/axelor-sale/src/main/resources/i18n/messages_en.csv
+++ b/axelor-sale/src/main/resources/i18n/messages_en.csv
@@ -12,6 +12,7 @@
 "Access to parent sale order",,,
 "Accounted Revenue",,,
 "Accounting Family sale turnover (Excl. Tax) per month",,,
+"Acquired",,,
 "Action",,,
 "Actions",,,
 "Activate",,,
@@ -66,6 +67,7 @@
 "Batchs",,,
 "Bi-monthly",,,
 "Blocked",,,
+"Bug occured for loyalty account with id {}",,,
 "Business Project",,,
 "Business project",,,
 "Calculated fields on configurator",,,
@@ -149,6 +151,8 @@
 "Country",,,
 "Create Order from this Template",,,
 "Create the quotation",,,
+"Created by",,,
+"Created on",,,
 "Creation date",,,
 "Creation for every sale order lines",,,
 "Creation for the sale order",,,
@@ -184,6 +188,7 @@
 "Default holdback percentage",,,
 "Default unit",,,
 "Define as template",,,
+"Delay (day)",,,
 "Delivered",,,
 "Delivered quantity",,,
 "Delivery",,,
@@ -212,6 +217,7 @@
 "Draft",,,
 "Draft quotation",,,
 "Durations",,,
+"Earn loyalty account points",,,
 "Edit order",,,
 "Editor",,,
 "Either the sale order or the product is null.",,,
@@ -305,6 +311,10 @@
 "Loyalty account",,,
 "Loyalty account history",,,
 "Loyalty account history line",,,
+"Loyalty account points earning batch",,,
+"Loyalty account points earning report :",,,
+"Loyalty account with id %s",,,
+"Loyalty account(s) processed",,,
 "Loyalty accounts",,,
 "Loyalty points",,,
 "Main sale order line",,,
@@ -469,8 +479,10 @@
 "SO line",,,
 "SO lines",,,
 "Sale",,,
+"Sale Batch",,,
 "Sale Order",,,
 "Sale batch",,,
+"Sale batch filters",,,
 "Sale batches",,,
 "Sale blocking",,,
 "Sale config",,,
